Update: Croatian Language

--- a/angular.json
+++ b/angular.json
@@ -110,3 +110,27 @@
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "first-web-app:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "first-web-app:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "first-web-app"
+}
