--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -6,3 +6,14 @@
     "types": [
       "jasmine",
       "node"
+    ]
+  },
+  "files": [
+    "test.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "**/*.spec.ts",
+    "**/*.d.ts"
+  ]
+}
