--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
+    "sourceMap": tru
