--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,4 +6,6 @@
     "sourceMap": true,
     "declaration": false,
     "module": "es2015",
-    "moduleResolution": "
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": 
