--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,4 +8,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": 
+    "experimentalDecorators": true,
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@
